RESOLVED FIXED231902
Fix leak of CGColorSpaceRef in FilterEffectRendererCoreImage::sharedCIContext()
https://bugs.webkit.org/show_bug.cgi?id=231902
Summary Fix leak of CGColorSpaceRef in FilterEffectRendererCoreImage::sharedCIContext()
David Kilzer (:ddkilzer)
Reported 2021-10-18 09:46:17 PDT
Fix leak of CGColorSpaceRef in FilterEffectRendererCoreImage::sharedCIContext(). Found by clang static analyzer.
Attachments
Patch v1 (2.25 KB, patch)
2021-10-18 09:49 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-18 09:46:28 PDT
David Kilzer (:ddkilzer)
Comment 2 2021-10-18 09:49:02 PDT
Created attachment 441619 [details] Patch v1
Wenson Hsieh
Comment 3 2021-10-18 09:50:02 PDT
Comment on attachment 441619 [details] Patch v1 Good catch! r=mews
David Kilzer (:ddkilzer)
Comment 4 2021-10-19 12:52:28 PDT
Comment on attachment 441619 [details] Patch v1 Took a little over a day, but everything is green now, so adding cq+.
EWS
Comment 5 2021-10-19 12:56:20 PDT
Committed r284481 (243240@main): <https://commits.webkit.org/243240@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441619 [details].
Note You need to log in before you can comment on or make changes to this bug.