Fix leak of CGColorSpaceRef in FilterEffectRendererCoreImage::sharedCIContext() <https://webkit.org/b/231902> <rdar://problem/84375203>

Reviewed by Wenson Hsieh.

* platform/graphics/coreimage/FilterEffectRendererCoreImage.mm:
(WebCore::FilterEffectRendererCoreImage::sharedCIContext):
- Use adoptCF() to fix the leak.


Canonical link: https://commits.webkit.org/243240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284481 268f45cc-cd09-0410-ab3c-d52691b4dbfc